# Android-Serial-Communication

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/serialcomdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/serialcomdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/android/serialcomdemo/: ExampleUnitTest.java
devicecontrol/: build.gradle
devicecontrol/src/androidTest/java/com/android/devicecotrol/: ExampleInstrumentedTest.java
devicecontrol/src/main/: AndroidManifest.xml
devicecontrol/src/main/aidl/com/android/devicecotrol/: DataBean.aidl  IDeviceControl.aidl  IInitSdkListener.aidl  IReadListener.aidl  IWriteListener.aidl
devicecontrol/src/main/java/com/android/devicecotrol/: DataBean.java  DeviceController.java  DeviceManager.java  IDeviceCon.java  OnInitSdkListener.java  OnReadListener.java  OnWriteListener.java  OperateConstants.java
devicecontrol/src/test/java/com/android/devicecotrol/: ExampleUnitTest.java
devservice/: build.gradle
devservice/src/androidTest/java/com/android/device/service/: ExampleInstrumentedTest.java
devservice/src/main/: AndroidManifest.xml
devservice/src/main/res/values/: strings.xml
devservice/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
seriallibrary/: build.gradle
seriallibrary/src/main/: AndroidManifest.xml
seriallibrary/src/main/jni/: CMakeLists.txt  SerialPort.c  SerialPort.h
(+5 files in other folders)
